--- a/bitsmart/frontend/src/app/app.component.html
+++ b/bitsmart/frontend/src/app/app.component.html
@@ -199,6 +199,9 @@
       <div>
         <datepicker></datepicker>
       </div>
+      <div>
+        <app-material-table></app-material-table>
+      </div>
     <!-- <div class="divider" role="separator" aria-label="Divider"></div> -->
     <div>
       <div class="pill-group">
@@ -217,6 +220,7 @@
     </div>
   </div>
 </main>
+
 
 
 <router-outlet />
