feat(frontend): investment dashboard added

--- a/bitsmart/frontend/src/app/app.component.html
+++ b/bitsmart/frontend/src/app/app.component.html
@@ -197,7 +197,7 @@
       <p>Select a date and we'll tell you when is the best time to buy and sell!</p>
       <div class="divider" role="separator" aria-label="Divider"></div>
       <div>
-        <datepicker></datepicker>
+        <investmentdashboard></investmentdashboard>
       </div>
       <div>
         <app-material-table></app-material-table>
