--- a/bitsmart/frontend/src/app/components/InvestmentDashboard/InvestmentDashboard.component.css
+++ b/bitsmart/frontend/src/app/components/InvestmentDashboard/InvestmentDashboard.component.css
@@ -4,7 +4,8 @@
     align-items: start;
 }
 
-.left-column, .right-column {
+.left-column,
+.right-column {
     padding: 20px;
 }
 
@@ -17,6 +18,8 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    padding-top: 20px;
+    padding-right: 20px;
 }
 
 mat-form-field {
