feat(frontend): added investment and prediction dashboards, fixed styling

--- a/bitsmart/frontend/src/app/app.component.html
+++ b/bitsmart/frontend/src/app/app.component.html
@@ -199,10 +199,17 @@
       <div>
         <investmentdashboard></investmentdashboard>
       </div>
+      <br>
+      <h2>Investment Prediction Results</h2>
+      <div>
+        <predictiondashboard></predictiondashboard>
+      </div>
+      <br>
+      <div class="divider" role="separator" aria-label="Divider"></div>
       <div>
         <app-material-table></app-material-table>
       </div>
-    <!-- <div class="divider" role="separator" aria-label="Divider"></div> -->
+      <br>
     <div>
       <div class="pill-group">
         @for (item of [
