--- a/bitsmart/frontend/src/app/components/MaterialTable/MaterialTable.component.html
+++ b/bitsmart/frontend/src/app/components/MaterialTable/MaterialTable.component.html
@@ -3,37 +3,27 @@
 
     <ng-container matColumnDef="date">
     <th mat-header-cell *matHeaderCellDef> Date </th>
-    <td mat-cell *matCellDef="let element"> {{element.date}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.Date}} </td>
     </ng-container>
 
     <ng-container matColumnDef="open">
     <th mat-header-cell *matHeaderCellDef> Open </th>
-    <td mat-cell *matCellDef="let element"> {{element.open}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.Open}} </td>
     </ng-container>
 
     <ng-container matColumnDef="high">
     <th mat-header-cell *matHeaderCellDef> High </th>
-    <td mat-cell *matCellDef="let element"> {{element.high}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.High}} </td>
     </ng-container>
 
     <ng-container matColumnDef="low">
     <th mat-header-cell *matHeaderCellDef> Low </th>
-    <td mat-cell *matCellDef="let element"> {{element.low}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.Low}} </td>
     </ng-container>
 
     <ng-container matColumnDef="close">
     <th mat-header-cell *matHeaderCellDef> Close </th>
-    <td mat-cell *matCellDef="let element"> {{element.close}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="adjclose">
-    <th mat-header-cell *matHeaderCellDef> Adj Close </th>
-    <td mat-cell *matCellDef="let element"> {{element.adjclose}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="volume">
-    <th mat-header-cell *matHeaderCellDef> Volume </th>
-    <td mat-cell *matCellDef="let element"> {{element.volume}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.Close}} </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
