fix(frontend): typo

--- a/bitsmart/frontend/src/app/components/MaterialTable/MaterialTable.component.html
+++ b/bitsmart/frontend/src/app/components/MaterialTable/MaterialTable.component.html
@@ -1,4 +1,4 @@
-<h2>Bitcoin USD (BTC-USD) in the Past 7 Days</h2>
+<h2>Bitcoin USD (BTC-USD) in the Next 7 Days</h2>
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
     <ng-container matColumnDef="date">
